# melange-basic-template

./: .gitignore  Makefile  README.md  bsconfig.json  dune  dune-library  dune-project  melange-basic-template.opam  melange-basic-template.opam.locked  package-lock.json  package.json
lib/: dune
lib1/: bsconfig.json  dune-library  package.json
lib1/dir_1_1/: m_1_1_4_3.re  m_1_1_5_1.re
lib1/dir_1_2/: m_1_2_3_1.re  m_1_2_6_5.re
lib1/dir_1_3/: m_1_3_3_4.re  m_1_3_4_1.re  m_1_3_5_2.re  m_1_3_6_6.re
lib1/dir_1_4/: m_1_4_3_2.re  m_1_4_6_6.re
lib1/dir_1_5/: m_1_5_1_1.re  m_1_5_2_5.re  m_1_5_3_5.re  m_1_5_5_3.re
lib1/dir_1_6/: m_1_6_2_6.re  m_1_6_3_6.re  m_1_6_4_1.re  m_1_6_5_1.re
lib1/dir_2_1/: m_2_1_2_1.re  m_2_1_3_5.re
lib1/dir_2_2/: m_2_2_1_4.re  m_2_2_3_5.re  m_2_2_5_3.re  m_2_2_6_5.re
lib1/dir_2_3/: m_2_3_3_1.re  m_2_3_4_6.re
lib1/dir_2_4/: m_2_4_3_3.re  m_2_4_5_1.re  m_2_4_6_6.re
lib1/dir_2_5/: m_2_5_3_5.re  m_2_5_4_1.re  m_2_5_6_2.re
lib1/dir_2_6/: m_2_6_3_2.re  m_2_6_4_3.re  m_2_6_5_4.re
lib2/: bsconfig.json  dune  dune-library  package.json
lib2/dir_3_1/: m_3_1_1_1.re  m_3_1_2_2.re  m_3_1_3_5.re  m_3_1_4_4.re  m_3_1_5_1.re  m_3_1_6_4.re
lib2/dir_3_2/: m_3_2_2_2.re  m_3_2_5_4.re  m_3_2_6_1.re
lib2/dir_3_3/: m_3_3_3_6.re  m_3_3_5_2.re
lib2/dir_3_4/: m_3_4_2_4.re  m_3_4_3_5.re  m_3_4_4_3.re  m_3_4_5_6.re  m_3_4_6_4.re
lib2/dir_3_5/: m_3_5_3_6.re  m_3_5_4_1.re
lib2/dir_3_6/: m_3_6_4_6.re  m_3_6_6_1.re
lib2/dir_4_1/: m_4_1_2_1.re  m_4_1_4_2.re  m_4_1_5_6.re
lib2/dir_4_2/: m_4_2_2_6.re  m_4_2_3_2.re  m_4_2_4_1.re  m_4_2_6_2.re
lib2/dir_4_3/: m_4_3_4_1.re  m_4_3_5_5.re
lib2/dir_4_4/: m_4_4_2_4.re  m_4_4_3_2.re  m_4_4_4_4.re  m_4_4_5_3.re
lib2/dir_4_5/: m_4_5_3_1.re
lib2/dir_4_6/: m_4_6_5_4.re  m_4_6_6_4.re
patches/: reason-react+0.9.1.patch
src/: Main.re  dune  dune-library  package.json
src/dir_1_1/: m_1_1_2_3.re  m_1_1_3_2.re  m_1_1_6_2.re
src/dir_1_2/: m_1_2_2_6.re  m_1_2_4_6.re  m_1_2_5_5.re
src/dir_1_3/: m_1_3_2_2.re
src/dir_1_4/: m_1_4_2_2.re  m_1_4_4_2.re  m_1_4_5_6.re
src/dir_1_5/: m_1_5_4_2.re  m_1_5_6_5.re
src/dir_1_6/: m_1_6_6_1.re
src/dir_2_1/: m_2_1_4_2.re  m_2_1_5_4.re  m_2_1_6_2.re
src/dir_2_2/: m_2_2_2_3.re  m_2_2_4_4.re
src/dir_2_3/: m_2_3_2_4.re  m_2_3_5_5.re  m_2_3_6_2.re
src/dir_2_4/: m_2_4_2_3.re  m_2_4_4_3.re
src/dir_2_5/: m_2_5_2_3.re  m_2_5_5_6.re
src/dir_2_6/: m_2_6_2_5.re  m_2_6_6_2.re
src/dir_3_2/: m_3_2_3_1.re  m_3_2_4_1.re
src/dir_3_3/: m_3_3_2_5.re  m_3_3_4_5.re  m_3_3_6_6.re
src/dir_3_5/: m_3_5_2_5.re  m_3_5_5_2.re  m_3_5_6_2.re
src/dir_3_6/: m_3_6_2_4.re  m_3_6_3_6.re  m_3_6_5_3.re
src/dir_4_1/: m_4_1_3_6.re  m_4_1_6_3.re
src/dir_4_2/: m_4_2_5_5.re
src/dir_4_3/: m_4_3_2_3.re  m_4_3_3_5.re  m_4_3_6_1.re
src/dir_4_4/: m_4_4_6_2.re
src/dir_4_5/: m_4_5_2_6.re  m_4_5_4_3.re  m_4_5_5_3.re  m_4_5_6_3.re
src/dir_4_6/: m_4_6_1_1.re  m_4_6_2_2.re  m_4_6_3_4.re  m_4_6_4_3.re
src/dir_5_1/: m_5_1_2_4.re  m_5_1_3_3.re  m_5_1_4_3.re  m_5_1_5_2.re  m_5_1_6_1.re
src/dir_5_2/: m_5_2_2_1.re  m_5_2_3_2.re  m_5_2_4_6.re  m_5_2_5_3.re  m_5_2_6_1.re
src/dir_5_3/: m_5_3_1_1.re  m_5_3_2_1.rei  m_5_3_2_5.re  m_5_3_3_6.re  m_5_3_4_5.re  m_5_3_5_1.re  m_5_3_6_5.re
(+46 files in other folders)
