(lang dune 3.1)

(using directory-targets 0.1)

(name melange-basic-template)

(source
 (github jchavarri/melange-basic-template))

(license MIT)

(authors "jchavarri")

(maintainers "jchavarri")

(package
 (name melange-basic-template)
 (synopsis "Project template for melange")
 (description
  "Template for a minimal melange project"))
