opam-version: "2.0"
synopsis: "Project template for melange"
description: "Template for a minimal melange project"
maintainer: ["jchavarri"]
authors: ["jchavarri"]
license: "MIT"
homepage: "https://github.com/jchavarri/melange-basic-template"
bug-reports: "https://github.com/jchavarri/melange-basic-template/issues"
depends: [
  "ocaml" {>= "4.14.1" & < "5.0.0"}
  "dune" {>= "3.0"}
  "melange" {dev}
  "melange-compiler-libs" {dev}
  "ocaml-lsp-server" {dev}
  "dot-merlin-reader" {dev}
  "odoc" {with-doc}
]
build: [
  ["echo" "run make build"]
]
dev-repo: "git+https://github.com/jchavarri/melange-basic-template.git"
pin-depends: [
  [ "melange.dev" "git+https://github.com/melange-re/melange.git#56dc1e6dfe3a21ba2fb85a20e6861bc84c482c60" ]
  [ "melange-compiler-libs.dev" "git+https://github.com/melange-re/melange-compiler-libs.git#68597066d66473615d14b5a3cc603e329653514a" ]
]
