opam-version: "2.0"
synopsis: "Project template for melange"
description: "Template for a minimal melange project"
maintainer: ["jchavarri"]
authors: ["jchavarri"]
license: "MIT"
homepage: "https://github.com/jchavarri/melange-basic-template"
bug-reports: "https://github.com/jchavarri/melange-basic-template/issues"
depends: [
  "ocaml" {>= "4.14.1" & < "5.0.0"}
  "dune" {>= "3.5"}
  "melange" {dev}
  "ocaml-lsp-server" {dev}
  "dot-merlin-reader" {dev}
  "odoc" {with-doc}
]
build: [
  ["echo" "run make build"]
]
dev-repo: "git+https://github.com/jchavarri/melange-basic-template.git"
pin-depends: [
  [ "melange.dev" "git+https://github.com/melange-re/melange.git#2f561d73268e2ec64844fa9f03e88a8727b23b48" ]
]
