opam-version: "2.0"
synopsis: "Project template for melange"
description: "Template for a minimal melange project"
maintainer: ["jchavarri"]
authors: ["jchavarri"]
license: "MIT"
homepage: "https://github.com/jchavarri/melange-basic-template"
bug-reports: "https://github.com/jchavarri/melange-basic-template/issues"
depends: [
  "ocaml" {>= "4.14.0" & < "5.0.0"}
  "dune" {>= "3.5"}
  "melange" {dev}
  "ocaml-lsp-server" {dev}
  "dot-merlin-reader" {dev}
  "odoc" {with-doc}
]
build: [
  ["echo" "run make build"]
]
dev-repo: "git+https://github.com/jchavarri/melange-basic-template.git"
pin-depends: [
  [ "melange.dev" "git+https://github.com/melange-re/melange.git#bc7549a32516a9d1be6d307f2cb1bf6a3acfd6dd" ]
]
